--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -34,6 +34,23 @@ spring:
             - Path=/prescribe-service/**
             - Method=GET, POST
 
+#cloud:
+#  gateway:
+#    default-filters:
+#      - DedupeResponseHeader=Access-Control-Allow-Origin Access-Control-Allow-Credentials
+#    globalcors:
+#      cors-configurations:
+#        '[/**]':
+#          allowedOrigins: 'http://localhost:3000'
+#          allow-credentials: true
+#          allowedHeaders: '*'
+#          allowedMethods:
+#            - PUT
+#            - GET
+#            - POST
+#            - DELETE
+#            - OPTIONS
+
 management:
   endpoints:
     web:
