--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -45,21 +45,21 @@ spring:
             - Path=/data-service/**
             - Method=GET, POST, PUT
 
-#      default-filters:
-#        - DedupeResponseHeader=Access-Control-Allow-Origin Access-Control-Allow-Credentials
-#      globalcors:
-#        cors-configurations:
-#          '[/**]':
-#            allowedOrigins: 'http://localhost:3000/**'
-#            allow-credentials: true
-#            allowedHeaders: '*'
-#            allowedMethods:
-#              - PUT
-#              - GET
-#              - POST
-#              - DELETE
-#              - OPTIONS
-#        add-to-simple-url-handler-mapping: true
+      default-filters:
+        - DedupeResponseHeader=Access-Control-Allow-Origin Access-Control-Allow-Credentials
+      globalcors:
+        cors-configurations:
+          '[/**]':
+            allowedOrigins: 'http://localhost:3000/**'
+            allow-credentials: true
+            allowedHeaders: '*'
+            allowedMethods:
+              - PUT
+              - GET
+              - POST
+              - DELETE
+              - OPTIONS
+        add-to-simple-url-handler-mapping: true
 
 management:
   endpoints:
