--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -50,7 +50,7 @@ spring:
       globalcors:
         cors-configurations:
           '[/**]':
-            allowedOrigins: 'http://localhost:3000/**'
+            allowedOrigins: 'http://localhost:3000/'
             allow-credentials: true
             allowedHeaders: '*'
             allowedMethods:
